[metadata]
name = gasyncio
version = attr: gasyncio.__version__
author = Itaï BEN YAACOV
author_email = candeb@free.fr
description = A minimalistic asyncio event loop based on the GLib main event loop
long_description = file: README.md
# url = http://math.univ-lyon1.fr/~begnac
# download_url = http://math.univ-lyon1.fr/~begnac/debian/gampc
keywords = asyncio, GLib
license = GPLv3+
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[install]
user = True

[upload]
sign = True
identity = candeb@free.fr