[metadata]
name = gasyncio
version = attr: gasyncio.__version__
author = Itaï BEN YAACOV
author_email = candeb@free.fr
description = A minimalistic asyncio event loop based on the GLib main event loop
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/begnac/gasyncio
keywords = asyncio, GLib
license = LGPLv2.1+
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
